# veadk-examples

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  config.yaml.example  config.yaml.full  pyproject.toml
examples/a_basic_usage/: 01_tiny_agent_usage.py  02_detail_agent_usage.py  03_agent_with_tools.py  06_agent_with_multi_turn_dialogue.py  06_multi_turn_dialogue.py  07_multiple_agents.py  09_agent_with_long_term_memory.py  10_agent_with_kb.py  12_complex_agent.py  README.md  a_tiny_agent_usage.py  b_detail_agent_usage.py  c_agent_with_tools.py  c_local_short_memory.py  d_agent_with_builtin_tools.py  d_persistent_short_term_memory.py  e_agent_with_mcp_tools.py  e_agent_with_tools.py  f_agent_with_builtin_tools.py  f_multi_turn_dialogue.py  g_agent_with_mcp_tools.py  g_multiple_agents.py  h_multi_modal.py  h_multi_turn_dialogue.py  i_chat_with_llm_parameter.py  i_multiple_agents.py  j_agent_with_long_term_memory.py  j_multi_modal.py  k_chat_with_llm_parameter.py  l_agent_with_long_term_memory.py  l_viking_long_term_memory.py  m_agent_with_kb.py  m_viking_kb.py  n_viking_long_term_memory.py
examples/b_advanced_usage/: README.md
examples/b_advanced_usage/a_veadk_web/: main.py
examples/b_advanced_usage/b_a2a_demo/: client.py
examples/b_advanced_usage/b_a2a_demo/server/: agent.py  server.py
examples/b_advanced_usage/c_observability/: cozeloop_tracer.py  local_tracer.py
examples/b_advanced_usage/d_vefaas_deploy/: verification_remote.py
examples/b_advanced_usage/e_evaluate/: main.py
examples/b_advanced_usage/f_use_long_term_memory_in_veadk_web/demo/: main.py
examples/b_advanced_usage/veadk_web/: __init__.py
examples/c_tricks/: README.md  custom_agent.py  use_session_state.py  user_visibility_by_hook.py
(+1 files in other folders)
