[project]
name = "veadk-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.5",
    "mcp-server-time>=2025.9.25",
    "opensearch-py>=2.8.0",
    "deepeval>=3.4.8",
    "prometheus-client>=0.22.1",
    "litellm<=1.75", # 高版本有个loggingworker的bug，先降一下
    "tos>=2.8.7",
    "veadk-python>=0.2.12",
    "volcengine>=1.0.203",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
